--- a/src/pages/css/PriceListStyles.css
+++ b/src/pages/css/PriceListStyles.css
@@ -66,6 +66,7 @@
 .search-input {
   width: 100%;
   padding: 8px 32px 8px 12px;
+  height: 2rem;
   border: 1px solid #ccc;
   border-radius: 5rem;
   font-size: 14px;
